<resources>
    <string name="Advanced_settings">Advanced settings</string>
    <string name="ERROR_PLAYING_MEDIA">Error playing media:</string>
    <string name="F1">F1</string>
    <string name="F2">F2</string>
    <string name="F3">F3</string>
    <string name="F4">F4</string>
    <string name="HTTP_proxy_settings">HTTP Proxy settings</string>
    <string name="MEDIA_ERROR_IO">IO error</string>
    <string name="MEDIA_ERROR_MALFORMED">URL malformed</string>
    <string name="MEDIA_ERROR_NOT_VALID_FOR_PROGRESSIVE_PLAYBACK">Media file is not valid</string>
    <string name="MEDIA_ERROR_SERVER_DIED">Media server died</string>
    <string name="MEDIA_ERROR_TIMED_OUT">Media get timeout</string>
    <string name="MEDIA_ERROR_UNKNOWN">Unknown media format</string>
    <string name="MEDIA_ERROR_UNSUPPORTED">Media unsupported</string>
    <string name="Portal_settings">Portal settings</string>
    <string name="UDPXY_settings">UDPXY settings</string>
    <string name="USER_AUTH_ERROR">User authentication error</string>
    <string name="USER_AUTH_FAILED_ON_PROXY">User authentication failed on proxy</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="about_app_extra_description">"If you have any questions about IPTV service, please, address them directly to your IPTV service provider.
 Please, do not write emails to the email address above if you have any portal-related issues (missing EPG, etc). The author of the app won't be able to help you with these issues."</string>
    <string name="about_app_title">About App…</string>
    <string name="action_chromecast">Send to Chromecast</string>
    <string name="activity_hardware_acceleration_title">Accelerated rendering</string>
    <string name="always_show_overlay_buttons">Always show overlay buttons</string>
    <string name="always_show_overlay_buttons_summary">Show overlay buttons if using mouse or remote control</string>
    <string name="application_id">com.mytv.stb.emu.tu</string>
    <string name="aspect_ratio_11_18">11:8</string>
    <string name="aspect_ratio_14_10">14:10</string>
    <string name="aspect_ratio_14_9">14:9</string>
    <string name="aspect_ratio_16_10">16:10</string>
    <string name="aspect_ratio_16_9">16:9</string>
    <string name="aspect_ratio_1_1">1:1</string>
    <string name="aspect_ratio_21_9">21:9</string>
    <string name="aspect_ratio_235_100">2.35:1</string>
    <string name="aspect_ratio_239_100">2.39:1</string>
    <string name="aspect_ratio_2414_1000">2.414:1</string>
    <string name="aspect_ratio_276_100">2.76:1</string>
    <string name="aspect_ratio_2_1">2:1</string>
    <string name="aspect_ratio_3_2">3:2</string>
    <string name="aspect_ratio_4_3">4:3</string>
    <string name="aspect_ratio_5_4">5:4</string>
    <string name="aspect_ratio_auto">Auto</string>
    <string name="aspect_ratio_fill">Fill</string>
    <string name="aspect_ratio_fit_horizontal">Fit horizontal</string>
    <string name="aspect_ratio_fit_vertical">Fit vertical</string>
    <string name="autostart_on_boot">Auto start on device boot</string>
    <string name="boot_external_storage_info">May not work if App installed on external storage!</string>
    <string name="browser_scaling_method_summary">Try to choose another scaling method if portal size is too big or too small</string>
    <string name="browser_scaling_method_title">Scaling method</string>
    <string name="btn_app">APP</string>
    <string name="btn_change_aspect_ratio">Change aspect ratio</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_profile_info" />
    <string name="btn_reload_portal">Reload portal</string>
    <string name="btn_select_audio_lang">Audio language</string>
    <string name="btn_select_subtitle">Subtitles</string>
    <string name="btn_stb_aspect_ratio">Aspect ratio</string>
    <string name="btn_stb_exit">Exit</string>
    <string name="btn_stb_info">Info</string>
    <string name="btn_stb_menu">Menu</string>
    <string name="btn_stb_service">Service</string>
    <string name="btn_stb_setup">Setup</string>
    <string name="check_updates_title">Check updates</string>
    <string name="common_settings">Common settings</string>
    <string name="common_settings_summary">Common App settings</string>
    <string name="configure_key_bindings_summary">Configure key maps. Mouse or touch screen is required!</string>
    <string name="controls_display_timeout">Hide controls after… (ms)</string>
    <string name="days_to_install_updates_title">Day of week…</string>
    <string name="enable_android_tv_recommendations_summary">"Show recommendations on Android TV's main screen"</string>
    <string name="enable_android_tv_recommendations_title">Enable recommendations</string>
    <string name="enable_network_cache_summary">Use network cache to speed up portal loading</string>
    <string name="enable_network_cache_title">Enable network cache</string>
    <string name="enable_rc_title">Enable remote controls service</string>
    <string name="extra_buttons">RC</string>
    <string name="hide_navigation_bar">Hide navigation bar</string>
    <string name="hide_navigation_bar_summary">Hide navigation bar (Back, Home etc)</string>
    <string name="ignores_arrow_keys_and_ok">(ignores arrow keys and OK)</string>
    <string name="key_code">\# KEY CODE #</string>
    <string name="key_configuration">Configure key maps</string>
    <string name="key_name">\# KEY NAME #</string>
    <string name="keyboard">Keyboard</string>
    <string name="keyboard_show_focus">Highlight selected key</string>
    <string name="keyboard_show_focus_summary">"Check if you don't have a touchscreen (e.g. on TVs/STBs)."</string>
    <string name="keyboard_type">Keyboard type</string>
    <string name="keyboard_type_summary">"Select \"Software keyboard\" if native keyboard doesn't work."</string>
    <string name="keymap_btn_cancel">Cancel</string>
    <string name="keymap_btn_delete">Delete</string>
    <string name="keymap_btn_reset">Reset</string>
    <string name="keymap_btn_save_key">Save key</string>
    <string name="lang_dialog_title">Choose language:</string>
    <string name="lang_title">App language</string>
    <string name="last_check_timestamp_title">Show available updates</string>
    <string name="long_key_press">Long key press</string>
    <string name="mail_to">E-mail: max@mvas.eu</string>
    <string name="menu_aspect_ratio_dynamic">Dynamic</string>
    <string name="menu_aspect_ratio_non_standard">Non-standard</string>
    <string name="menu_aspect_ratio_standard">Standard</string>
    <string name="menu_aspect_ratio_wide_screen">Wide screen</string>
    <string name="network_cache_size_summary">Default: 20480 KB (20 MB)</string>
    <string name="network_cache_size_title">Cache size (KBytes)</string>
    <string name="network_settings_title">Network settings</string>
    <string name="pause_media_in_background_summary">Stop media stream when App in background</string>
    <string name="pause_media_in_background_title">Stop in background</string>
    <string name="pip_mode_on_pause">Switch to PiP mode on minimize</string>
    <string name="pip_mode_on_pause_summary">"Switch to Picture-in-picture mode when app is running in background instead of pausing
Android 7+ only"</string>
    <string name="player_settings">Media player settings</string>
    <string name="pref_hardware_decoding_summary">This option if selected will attempt hardware decoding before falling back to software</string>
    <string name="pref_hardware_decoding_title">Hardware decoding</string>
    <string name="pref_video_debanding_summary">Select video debanding mode</string>
    <string name="pref_video_debanding_title">Debanding</string>
    <string name="pref_video_fastdecode_summary">Trades quality for speed and thus fluent playback.\\nREDUCES QUALITY A LOT</string>
    <string name="pref_video_fastdecode_title">Low-quality video decoding</string>
    <string name="pref_video_interpolation_summary">Reduce judder caused by mismatched video FPS and display Hz\\nRequires Video sync set to any of the display-* modes</string>
    <string name="pref_video_interpolation_title">Interpolation</string>
    <string name="pref_video_sync_default">audio</string>
    <string name="pref_video_sync_summary">How the player synchronizes audio and video</string>
    <string name="pref_video_sync_title">Video sync</string>
    <string name="preferences">Settings</string>
    <string name="press_a_key_on_your_remote_control_then_select_an_action_from_the_list_below">Press a key on your remote control, then select an action from the list below:</string>
    <string name="rc_device_name_summary">Latin letters, numbers and spaces only!</string>
    <string name="rc_device_name_title">Device name</string>
    <string name="rc_id">\# RC id#</string>
    <string name="rc_password_summary">A password for remote control service. 32 symbols max.</string>
    <string name="rc_password_title">Password</string>
    <string name="remote_control">Remote control:</string>
    <string name="remote_control_settings_descr">Keep in mind that only keyboard events are working now. Mouse and touchscreen events are not supported yet.</string>
    <string name="remote_control_settings_title">Remote control settings</string>
    <string name="screen_orientation">Screen orientation</string>
    <string name="screen_orientation_summary">Set screen orientation</string>
    <string name="select_media_player">Media player</string>
    <string name="select_profile">Profile</string>
    <string name="settings_password_enabled_title">Password protection enabled</string>
    <string name="settings_password_summary">Change password to access settings</string>
    <string name="settings_password_title">Settings password</string>
    <string name="site_url_title">Web site: http://kt.kg</string>
    <string name="software_keyboard_input_method_summary">"Set to Forced if software keyboard doesn't work."</string>
    <string name="software_keyboard_input_method_title">Software keyboard input method</string>
    <string name="software_keyboard_languages">Software keyboard languages</string>
    <string name="special_thanks_to_title">Special thanks to:</string>
    <string name="startup_settings">Boot options</string>
    <string name="startup_settings_summary">Value should at least 1000</string>
    <string name="stb_about">About…</string>
    <string name="stb_about_summary">About App</string>
    <string name="stb_debug_config">Debug</string>
    <string name="stb_debug_config_summary">Configure debug options</string>
    <string name="time_to_install_updates_title">Time</string>
    <string name="title_activity_import_export">Save and restore settings</string>
    <string name="update_use_root_summary">Install updates with root permission. ROOT required!</string>
    <string name="update_use_root_title">Use root permissions</string>
</resources>