<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/about_app_layout_0" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceLarge" android:layout_gravity="center_horizontal" android:padding="10.0pt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/stb_about" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/copyright" android:padding="4.0pt" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:padding="4.0pt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mail_to" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:padding="4.0pt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/site_url_title" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/about_app_extra_description" android:padding="4.0pt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_app_extra_description" />
    <GridLayout android:layout_gravity="center_horizontal" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:rowCount="2" android:columnCount="2">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:layout_gravity="center_horizontal" android:padding="10.0pt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="0" android:text="@string/special_thanks_to_title" android:layout_row="0" android:layout_columnSpan="2" />
    </GridLayout>
</LinearLayout>